samples/_failures_safe/1761091356_6fa70c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0c3f1d6.c: In function ‘handle_error’:
./samples/SAFE/__tmp_a0c3f1d6.c:194:31: error: expected ‘]’ at end of input
  194 |     input[strcspn(input, "\n")
      |                               ^
      |                               ]
./samples/SAFE/__tmp_a0c3f1d6.c:194:5: error: expected declaration or statement at end of input
  194 |     input[strcspn(input, "\n")
      |     ^~~~~
